# resources/js/front_view/providers.js
@@ -1,0 +1,10 @@
+export function getheadercate(){
+const baseurl="http://127.0.0.1:8000/api"
+return {
+    getheaderCateforyData:''+baseurl+'/getheaderCateforyData',
+    gethomedata:''+baseurl+'/gethomedata',
+
+}
+}
+
+export default getheadercate;
